12.05-kube-cni/nw-policy/nw-policy-deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-ingress-policy
spec:
  podSelector: {}
  policyTypes:
    - Ingress
