12.05-kube-cni/nw-policy/nw-policy-ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-ingress-app
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-node
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nw-multitool
    ports:
    - protocol: TCP
      port: 8080
